src/command/snapshots/dotrift__command__util__apply_clean_up_dry_run.snap
---
source: src/command/util.rs
expression: "strip_str(crate::output::test_capture::take_all())"
---
[REMOVE] @/target/broken.txt
[REMOVE] @/target/file.txt
[REMOVE] @/target/link.txt
[REMOVE] @/target/linkdir
[REMOVE] @/target/subdir/nested/inner.txt
[SUMMARY] 5 removals
