src/command/snapshots/dotrift__command__util__apply_dry_run.snap
---
source: src/command/util.rs
expression: "strip_str(crate::output::test_capture::take_all())"
---
[CREATE] @
[CREATE] @
[CREATE] @
[CREATE] @/target
[CREATE] @/target/broken.txt -> @/source/broken.txt (symlink)
[CREATE] @/target/file.txt -> @/source/file.txt (symlink)
[CREATE] @/target/link.txt -> @/source/link.txt (symlink)
[CREATE] @/target/linkdir -> @/source/linkdir (symlink)
[CREATE] @/target/subdir
[CREATE] @/target/subdir/nested
[CREATE] @/target/subdir/nested/inner.txt -> @/source/subdir/nested/inner.txt (symlink)
[SUMMARY] 5 creates
