src/command/snapshots/dotrift__command__util__profile_activate_valid.snap
---
source: src/command/util.rs
expression: "strip_str(crate::output::test_capture::take_all())"
---
profile `a` activated
