src/command/snapshots/dotrift__command__util__profile_list_active.snap
---
source: src/command/util.rs
expression: "strip_str(crate::output::test_capture::take_all())"
---
a (active)
b
c
