src/command/snapshots/dotrift__command__util__profile_show_base_only.snap
---
source: src/command/util.rs
expression: "strip_str(crate::output::test_capture::take_all())"
---
age   30
name  Alice
