src/command/snapshots/dotrift__command__util__profile_show_with_profiles.snap
---
source: src/command/util.rs
expression: "strip_str(crate::output::test_capture::take_all())"
---
editor   vim
email    work@example.com
gh_user  me
name     Alice
