src/command/snapshots/dotrift__command__util__status_clear_all.snap
---
source: src/command/util.rs
expression: "strip_str(crate::output::test_capture::take_all())"
---
[OK] cleared 4 entries
