src/command/snapshots/dotrift__command__util__status_list_all.snap
---
source: src/command/util.rs
expression: "strip_str(crate::output::test_capture::take_all())"
---
@/target/broken.txt -> @/source/broken.txt (symlink)
@/target/file.txt -> @/source/file.txt (symlink)
@/target/link.txt -> @/source/link.txt (symlink)
@/target/linkdir -> @/source/linkdir (symlink)
@/target/subdir/nested/inner.txt -> @/source/subdir/nested/inner.txt (symlink)
[SUMMARY] 5 entries
