src/command/snapshots/dotrift__command__util__status_list_single.snap
---
source: src/command/util.rs
expression: "strip_str(crate::output::test_capture::take_all())"
---
[MANAGED] @/target/a.txt -> @/source/a.txt (symlink)
