src/command/snapshots/dotrift__command__util__unapply_dry_run.snap
---
source: src/command/util.rs
expression: "strip_str(crate::output::test_capture::take_all())"
---
[REMOVE] @/target/broken.txt
[REMOVE] @/target/file.txt
[REMOVE] @/target/link.txt
[REMOVE] @/target/linkdir
[SUMMARY] 4 removals
